[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.3.1/frames/knight_f_run_anim_f0.png" type="Texture" id=2]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.3.1/frames/knight_f_run_anim_f2.png" type="Texture" id=3]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.3.1/frames/knight_f_run_anim_f1.png" type="Texture" id=4]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.3.1/frames/knight_f_run_anim_f3.png" type="Texture" id=5]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.3.1/frames/knight_f_idle_anim_f0.png" type="Texture" id=6]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.3.1/frames/knight_f_idle_anim_f3.png" type="Texture" id=7]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.3.1/frames/knight_f_idle_anim_f1.png" type="Texture" id=8]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.3.1/frames/knight_f_idle_anim_f2.png" type="Texture" id=9]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.3.1/frames/knight_f_hit_anim_f0.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "move",
"speed": 12.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 6 ) ],
"loop": false,
"name": "hit",
"speed": 12.0
} ]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 8, 1.99731 )
frames = SubResource( 2 )
animation = "New Anim"

[node name="Tween" type="Tween" parent="."]

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 0.1
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
